# larund-click

./: .env.example  .gitignore  GOOGLE_CONNECTION_AUDIT.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
docs/: ADVANCED_MEMORY.md  AGENT_TASK_MEMORY.md  APPROVAL_INBOX.md  ARCHITECTURE.md  ARTIFACT_ENGINE.md  ARTIFACT_RENDERERS.md  ARTIFACT_SKILLS.md  ARTIFACT_UI.md  BENCHMARK_AUDIT_REPORT.md  CONNECTIONS.md  COWORKER_CORE.md  CUSTOM_API_CONNECTIONS.md  DOCUMENT_GENERATION.md  FOLDER_WATCH.md  GATEWAY.md  LARUND_OPERATOR_BENCHMARKS.md  LOCAL_ARTIFACT_STORAGE.md  MARKETPLACE_READINESS.md  MCP_HUB.md  MCP_SECURITY.md  MEMORY_SYSTEM.md  MIGRATION_FROM_VISUAL.md  NOTIFICATIONS.md  NO_MOUSE_CORE.md  OPERATOR_ACCEPTANCE.md  SKILLS.md  (+33 more)
src-tauri/: AI_Ertekesitesi_Email_Tervezet.txt  Cargo.toml  adatok.csv  adatok.xlsx  app.manifest  build.rs  email_tervezet.txt  nepesseg_adatok.xlsx  szamla_1.txt  szamla_2.txt  tauri.conf.json  teszt_szamla.txt
src-tauri/.cargo/: config.toml
src-tauri/Larund_Phase_Test/: automation_status_report.md  delete_approval_test.txt  google_connection_fallback.csv
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/artifacts/: docx.rs  font.rs  invoice.rs  libreoffice.rs  mod.rs  pdf.rs  pptx.rs  preview.rs  storage.rs
src-tauri/src/commands/: agent.rs  app_catalog.rs  browser.rs  code_exec.rs  desktop.rs  documents.rs  fs_ops.rs  input_guard.rs  mod.rs  net.rs  process.rs  sheets.rs
src-tauri/~/.larund-code-runs/run-5200-1782641287877/: _larund_main.py
(+652 files in other folders)
